WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115145
Page Overlays shouldn't waste time flushing layers if we're not going to use it
https://bugs.webkit.org/show_bug.cgi?id=115145
Summary
Page Overlays shouldn't waste time flushing layers if we're not going to use it
Tim Horton
Reported
2013-04-24 18:16:29 PDT
Currently we have optimized page overlays to not make backing store for the page overlay layer until something causes it to paint - there's also no point in flushing it upon install.
Attachments
patch
(1.56 KB, patch)
2013-04-24 18:19 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-04-24 18:19:03 PDT
Created
attachment 199574
[details]
patch
Tim Horton
Comment 2
2013-04-24 18:31:54 PDT
http://trac.webkit.org/changeset/149086
Radar WebKit Bug Importer
Comment 3
2013-04-25 10:59:38 PDT
<
rdar://problem/13739070
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug