Page Overlays shouldn't waste time flushing layers if we're not going to use it https://bugs.webkit.org/show_bug.cgi?id=115145

Reviewed by Simon Fraser.

Don't flush the page overlay layer when it's installed - it starts out
with paintContents=false, so we don't really need a CALayer yet. We'll
flush later if need be.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::didInstallPageOverlay):


Canonical link: https://commits.webkit.org/133583@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149086 268f45cc-cd09-0410-ab3c-d52691b4dbfc